--- a/icrested/registration-school.html
+++ b/icrested/registration-school.html
@@ -1191,40 +1191,40 @@
 </html>
 <script>
 
-    function saveFormData() {
-        const form = document.getElementById('userForm');
-        const formData = new FormData(form);
+    // function saveFormData() {
+    //     const form = document.getElementById('userForm');
+    //     const formData = new FormData(form);
 
 
-        for (let [key, value] of formData.entries()) {
-            localStorage.setItem(key, value);
-        }
+    //     for (let [key, value] of formData.entries()) {
+    //         localStorage.setItem(key, value);
+    //     }
 
-    }
-
-
-    function loadFormData() {
-        const form = document.getElementById('userForm');
+    // }
 
 
-        for (let key in localStorage) {
-            if (localStorage.hasOwnProperty(key)) {
-                const field = form.elements[key];
-                if (field) {
-                    field.value = localStorage.getItem(key);
-                }
-            }
-        }
-    }
+    // function loadFormData() {
+    //     const form = document.getElementById('userForm');
 
 
-    const form = document.getElementById('userForm');
-    form.addEventListener('submit', function (event) {
-        localStorage.clear();
-    });
+    //     for (let key in localStorage) {
+    //         if (localStorage.hasOwnProperty(key)) {
+    //             const field = form.elements[key];
+    //             if (field) {
+    //                 field.value = localStorage.getItem(key);
+    //             }
+    //         }
+    //     }
+    // }
 
 
-    window.addEventListener('load', loadFormData);
+    // const form = document.getElementById('userForm');
+    // form.addEventListener('submit', function (event) {
+    //     localStorage.clear();
+    // });
+
+
+    // window.addEventListener('load', loadFormData);
 
 
     setInterval(saveFormData, 1000);
