--- a/icrested/registration-school.html
+++ b/icrested/registration-school.html
@@ -1227,6 +1227,6 @@
     // window.addEventListener('load', loadFormData);
 
 
-    setInterval(saveFormData, 1000);
+    // setInterval(saveFormData, 1000);
 
 </script>
