--- a/from-data-to-world.html
+++ b/from-data-to-world.html
@@ -142,7 +142,7 @@
 
                 <div class="tags">
                   
-                  <a href="https://www.amazon.com/dp/B0C9RYSVQB" class="theme-btn">Find on amazon</a>
+                  <a href="https://books-by-lakshay.carrd.co/" class="theme-btn">Find on amazon</a>
                 </div>
               </div>
             </div>
