--- a/icrested/registeration-college.html
+++ b/icrested/registeration-college.html
@@ -646,6 +646,22 @@
                     institute
                 </label>
             </div>
+            <h2>Please ensure:</h2>
+            <ul>
+                <li>Copies of all the supporting documentation referred to within the application form are supplied in digital
+                    format.</li>
+                <li>We require the application form to be signed by the Head/Principal.</li>
+            </ul>
+            
+            <h3>Checklist of documents to be emailed in advance of the Consultant’s remote meeting:</h3>
+            <ol>
+                <li>Results of tests and assessments of pupils with Specific Learning Disabilities (SpLD) after admission for the
+                    last 3 years.</li>
+                <li>Certificates of specialist qualifications for all teachers listed within ‘Staffing and Staff Development’.</li>
+                <li>Department policy documents for Mathematics and English, if possible.</li>
+                <li>Consultants may ask for other documents to be emailed. This will be communicated to the school in advance, for
+                    example, lesson plans.</li>
+            </ol>
             <div class="col-md-4 d-none">
                 <label for="person_name" class="form-label">Type</label>
                 <input type="text" value="University" class="form-control" placeholder="Enter name" name="type_inst"
