--- a/icrested/registration-school.html
+++ b/icrested/registration-school.html
@@ -1161,6 +1161,22 @@
                 <textarea class="form-control" placeholder="Enter the names of all known SpLD pupils"
                     name="list_of_spLD_pupils"></textarea>
             </div>
+            <h2>Please ensure:</h2>
+            <ul>
+                <li>Copies of all the supporting documentation referred to within the application form are supplied in digital
+                    format.</li>
+                <li>We require the application form to be signed by the Head/Principal.</li>
+            </ul>
+            
+            <h3>Checklist of documents to be emailed in advance of the Consultant’s remote meeting:</h3>
+            <ol>
+                <li>Results of tests and assessments of pupils with Specific Learning Disabilities (SpLD) after admission for the
+                    last 3 years.</li>
+                <li>Certificates of specialist qualifications for all teachers listed within ‘Staffing and Staff Development’.</li>
+                <li>Department policy documents for Mathematics and English, if possible.</li>
+                <li>Consultants may ask for other documents to be emailed. This will be communicated to the school in advance, for
+                    example, lesson plans.</li>
+            </ol>
 
             <div class="col-md-8 mt-5">
                 <input class="form-check-input" type="checkbox" value="" id="confirm_details_checkbox" required>
