--- a/icrested/registeration-college.html
+++ b/icrested/registeration-college.html
@@ -645,7 +645,7 @@
                     I hereby agree that all the above-mentioned details are correct and I am the Head/Principal of the
                     institute
                 </label>
-            </div>
+            </div><br><br>
             <h2>Please ensure:</h2>
             <ul>
                 <li>Copies of all the supporting documentation referred to within the application form are supplied in digital
