--- a/about.html
+++ b/about.html
@@ -112,6 +112,14 @@
                         <div class="credential-edc-exp credential-experience">
                             <h2 data-aos="fade-up">Experience</h2>
                             <div class="credential-edc-exp-item" data-aos="zoom-in">
+                                <h4>June 2023 - Jun 2023</h4>
+                                <h3>Data Analyst & Software Development Manager</h3>
+                                <h5>iCrested UK</h5>
+                                <p>As a Data Analyst and Software Development Manager, I am effectively applying technical concepts to real-world business scenarios, enabling cost-effective solutions for the organization. One of my notable achievements was designing and implementing a low-cost system that fully automated our registration process for the institutes, resulting in significant cost savings on cloud infrastructure.
+<br>
+Moving forward, I am excited to tackle the challenge of analyzing complex real-world text data with over 200+ features. With my expertise in data analysis and software development, I am confident in my ability to extract valuable insights from this intricate dataset. By leveraging advanced analytical techniques and tools, I aim to uncover hidden patterns and trends that will drive informed decision-making and propel our organization's success.</p>
+                            </div>
+                            <div class="credential-edc-exp-item" data-aos="zoom-in">
                                 <h4>Feb 2023 - Present</h4>
                                 <h3>Technical Project Manager</h3>
                                 <h5>Atria Foundation</h5>
