--- a/linkedin.html
+++ b/linkedin.html
@@ -1,1 +1,3 @@
-<div class='sk-ww-linkedin-profile-post' data-embed-id='164213'></div><script src='https://widgets.sociablekit.com/linkedin-profile-posts/widget.js' async defer></script>
+<script>
+  window.location.href = "https://www.linkedin.com/in/lakshay2193";
+</script>
