--- a/linkedin.html
+++ b/linkedin.html
@@ -1,3 +1,3 @@
 <script>
-  window.location.href = "https://www.linkedin.com/in/lakshay2193";
+  window.location.href = "https://www.linkedin.com/in/lakshaykumar-tech/";
 </script>
