--- a/talks.html
+++ b/talks.html
@@ -73,7 +73,7 @@
                                 <a class="overlay-link" href="https://konfhub.com/fcaiamt"></a>
                                 <img src="assets/images/bg1.png" alt="BG" class="bg-img">
                                 <div class="project-img">
-                                    <img src="https://lakshaykumar.tech/images/talks/PanelDiscussionWithLakshay.png" alt="Panel Discussion with Lakshay kumar on AI and Data Science">
+                                    <img src="images/talks/PanelDiscussionWithLakshay.png" alt="Panel Discussion with Lakshay kumar on AI and Data Science">
                                 </div>
                                 <div class="d-flex align-items-center justify-content-between">
                                     <div class="project-info">
