--- a/schedule.html
+++ b/schedule.html
@@ -1,5 +1,5 @@
 
 <script>
-    window.location = "https://topmate.io/lakshay_kumar";
+    window.location = "https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ0Oi3dov4IyK-geZlJD3CMEeVdcEmRmVwvyoDu3M2nOqBarvEFPkcmgH2LVwTjhM91YsbHeMXzQ";
     
 </script>
