--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
                                 </div>
                                 <div class="right">
                                     <span>MAIL us</span>
-<h4><a href="mailto:contact@lakshaykumar.tech" style="color: #fff;">contact@lakshaykumar.tech</a></h4>
+<h4><a href="mailto:hey@lakshaykumar.tech" style="color: #fff;">hey@lakshaykumar.tech</a></h4>
 <h4><a href="mailto:itz.lakshaykumar@gmail.com" style="color: #fff;">itz.lakshaykumar@gmail.com</a></h4>
                                 </div>
                             </li>
