--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         content="Lakshay Kumar, Generative AI Engineer, Data Scientist, Machine Learning, Artificial Intelligence, Data Analysis, Neural Networks, NLP, Statistics, Python">
     <meta name="author" content="Lakshay Kumar">
 </head>
+    
 
 <body>
     <!-- Grid background -->
@@ -311,6 +312,15 @@
     </footer>
 
     <script src="script.js"></script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7BC3THF4Q1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7BC3THF4Q1');
+</script>
 </body>
 
 </html>
