--- a/schedule.html
+++ b/schedule.html
@@ -1,5 +1,31 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Book a Meeting with Lakshay</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      overflow: hidden;
+      font-family: sans-serif;
+    }
+    iframe {
+      width: 100vw;
+      height: 100vh;
+      border: none;
+    }
+  </style>
+</head>
+<body>
 
-<script>
-    window.location = "https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ0Oi3dov4IyK-geZlJD3CMEeVdcEmRmVwvyoDu3M2nOqBarvEFPkcmgH2LVwTjhM91YsbHeMXzQ";
-    
-</script>
+<iframe
+  src="https://calendar.google.com/calendar/appointments/schedules/AcZssZ3CE_kyrbXmotmHE1Aylxwj6qO4Bl_pD-XMbknG86EuGVn_iEz2PQEQAwVMllVcleGjS2oqpXRl?gv=true"
+  allowfullscreen
+  loading="lazy">
+</iframe>
+
+</body>
+</html>
