--- a/schedule.html
+++ b/schedule.html
@@ -1,31 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Book a Meeting with Lakshay</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      overflow: hidden;
-      font-family: sans-serif;
-    }
-    iframe {
-      width: 100vw;
-      height: 100vh;
-      border: none;
-    }
-  </style>
-</head>
-<body>
-
-<iframe
-  src="https://calendar.google.com/calendar/appointments/schedules/AcZssZ3CE_kyrbXmotmHE1Aylxwj6qO4Bl_pD-XMbknG86EuGVn_iEz2PQEQAwVMllVcleGjS2oqpXRl?gv=true"
-  allowfullscreen
-  loading="lazy">
-</iframe>
-
-</body>
-</html>
+This page has been moved to <a href="meet.lakshaykumar.tech">meet.lakshaykumar.tech</a>
