--- a/schedule.html
+++ b/schedule.html
@@ -1,1 +1,1 @@
-This page has been moved to <a href="meet.lakshaykumar.tech">meet.lakshaykumar.tech</a>
+This page has been moved to <a href="https://meet.lakshaykumar.tech">meet.lakshaykumar.tech</a>
