--- a/events.html
+++ b/events.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Event Viewer</title>
+    <title>Events : Lakshay Kumar</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         /* Additional styles specific to event page */
